🐛 Fix: BFC 규칙에 따른 z-index 값 재지정

--- a/src/components/Background/styles.module.scss
+++ b/src/components/Background/styles.module.scss
@@ -11,5 +11,5 @@
   top: 10px;
   margin: 0;
   padding: 0;
-  z-index: 99;
+  z-index: 3;
 }
