--- a/src/pages/MyPage/components/IdolFavoriteList/styles.module.scss
+++ b/src/pages/MyPage/components/IdolFavoriteList/styles.module.scss
@@ -19,7 +19,7 @@
 .list_box {
   padding-inline: 50px;
   position: relative;
-  z-index: 100;
+  z-index: 3;
 }
 
 .title {
